Fixed Translate again on mobile
Needed to remake the change after rebasing to master, as SF-2432 deleted the code where I made my fix.

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
@@ -1,3 +1,4 @@
+@use 'src/xforge-common/media-breakpoints/breakpoints' as *;
 @import 'src/variables';
 @import 'bootstrap/scss/mixins/breakpoints';
 
@@ -113,6 +114,10 @@ app-text {
 
 .content {
   height: calc(100vh - 84px);
+  @include media-breakpoint('<', sm) {
+    height: calc(100vh - 124px);
+  }
+
   display: grid;
   column-gap: 10px;
 
